--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -92,108 +92,66 @@
   </div>
 </div>
 
-  <!-- About Section -->
-  <div class="w3-container w3-padding-32 w3-theme-l1 about" id="about">
-    <h2 class="w3-center">ABOUT</h2>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">The Source of Our Strength Is Our People</h3>
-    <p>By leveraging our diversity of ideas, our research and innovation, our shared values, and our One-Firm Firm culture, we are moving forward together into a new era defined by design. By empowering our people and working seamlessly as an interconnected firm, we’re able to make the greatest impact for our communities as we continue to tackle the world’s challenges.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">We’re Committed to Enriching Our Communities.</h3>
-    <p>As stewards of our local communities, we are keenly focused on how we can design impactful, meaningful projects that benefit the people who live in them. Across every Gensler office around the world, our people donate their time, skills, and passion to their communities through volunteer service and pro bono and low bono work. We believe that when we put people first, we make the world a better place.
-    </p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">We Want to Be the Example for a More Diverse and Inclusive World.</h3>
-    <p>Michelangler is committed to driving change across the design industry, our client relationships, and the cities where we live, work, and play. We are dedicated to leading this change by starting from within. Two years since we launched our Strategies to Fight Racism, we continue to evolve our diversity, equity, and inclusion efforts, taking on an ever more localized approach in each of our communities. From partnering with our clients in designing equitable spaces, to creating opportunities in our industry for diverse talent, we have made measurable progress on all fronts and continue to take action to create purposeful, inclusive, and resilient spaces for everyone.</p>
+  <!-- Content Section -->
+  <div class="w3-container w3-padding-32 about-special">
+    <p>As architects, we rely on multiple design phases in our projects to ensure a smooth schedule and workflow for everyone on the project team. The Schematic Design phase is the first phase of the architectural design project schedule. Good programming and planning lay the groundwork for a successful design process, and ultimately a successful construction project.</p>
+    <p>Schematic design is one of our favorite phases because it could be a lot of fun, especially if your design team practices good planning and project management moving forward. While the end goal of the architectural design process is a built and occupied structure, these first efforts during the schematic design phase are imperative for success and efficiency in the rest of the project scope.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS SCHEMATIC DESIGN?</h3>
+    <p>Schematic Design is the first phase of the architectural design process. At this stage, your design team begins to describe the architectural and tectonic elements of the project design.</p>
+    <p>The team takes the programming and concept design, and translates it  into architectural and spatial designs. Most of us explore many ideas in this phase in order to achieve the best possible design solutions.<p>
+    <p>Two important components for a successful schematic design phase are site analysis and programming. Both the building program and location have significant implications in the design process, so it’s important to have a solid understanding of these foundational components at this stage.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHO'S INVOLVED IN SCHEMATIC DESIGN?</h3>
+    <p>This phase begins shortly after the project is started. While all team members and stakeholders can be involved in the schematic design process, it is more likely that the project Owner and Architect will be the most involved in this phase.</p>
+    <p>During this phase, you and the client work closely, to make sure all the necessary building program needs are covered in the project design. In fact, your client may be more involved in the day-to-day workings of the Schematic Design stage than any other design stage hereafter.<p>   
+    <p>Your architecture team will use tools like schematic diagrams and sketching to quickly convey spatial ideas to the client. These tools allow iterations and prevent any team member from settling on an idea prematurely.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT COMES AFTER SCHEMATIC DESIGN?</h3>
+    <p>By the end of schematic design, your architecture team should have a fundamental understanding of the scale and the systems of the project. There should be clarity about the various consultants and engineers that will be needed in order to proceed to the design development phase.</p>
+    <p>After the SD phase, the project will move into design development, and then into the construction document phase. The schedule and the budget of a project will determine the scope of each phase of the design.</p>
+    <p>During the next design phase, you and your team will flesh out the schematic design ideas even more, in order to more fully understand how the various systems and elements of the building design are integrated into the ultimate construction project. </p>
+    <p>As architects, it is common for multiple ideas and design concepts to be explored and developed during the schematic design phase. Ultimately, only one is chosen, but it’s important not to settle on any particular option too quickly in this stage, in order to make room for creative solutions and approaches. </p>
+    <p>But, if you do decide to explore multiple design options in schematic design, it’s necessary to choose one before moving forward into the design development phase. So everyone is on the same page when your team develops the design further.</p>
   </div>
-  
-  <!-- Container -->
-  <div class="w3-container" style="position:relative">
-    <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle service-button">+</a>
-  </div>
-<!-- Team Container -->
-<div class="w3-container w3-padding-64 w3-center" id="team">
-<h2>OUR TEAM</h2>
-<p>Meet the team - our office rats:</p>
 
-<div class="w3-row"><br>
-
-<div class="w3-quarter">
-  <div class="team-container w3-circle">
-    <img src="images/team1.jpg" alt="Boss" class="team-image w3-hover-opacity">
-  </div>
-  <h3>Johnny Walker</h3>
-  <p>Engineer</p>
-</div>
-
-<div class="w3-quarter">
-  <div class="team-container w3-circle">
-    <img src="images/team2.jpg" alt="Boss" class="team-image w3-hover-opacity">
-  </div>
-  <h3>Rebecca Flex</h3>
-  <p>Architect</p>
-</div>
-
-<div class="w3-quarter">
-  <div class="team-container w3-circle">
-    <img src="images/team3.jpg" alt="Boss" class="team-image w3-hover-opacity">
-  </div>
-  <h3>Jan Ringo</h3>
-  <p>Boss man</p>
-</div>
-
-<div class="w3-quarter">
-  <div class="team-container w3-circle">
-    <img src="images/team4.jpg" alt="Boss" class="team-image w3-hover-opacity">
-  </div>
-  <h3>Kai Ringo</h3>
-  <p>Developer</p>
-</div>
-</div>
-</div>
-
-<div class="faq w3-row-padding w3-padding-64 w3-theme-l1" id="faq">
+<div class="faq w3-row-padding w3-padding-64">
   <h2 class="w3-center">FAQ</h2>
-  <div id="tabs">
+  <div id="tabs" class="service-tabs">
     <ul>
-      <li><a href="#tabs-1">Generalization Questions</a></li>
-      <li><a href="#tabs-2">Academic Questions</a></li>
-      <li><a href="#tabs-3">Generalization Questions</a></li>
+      <li><a href="#tabs-1">Discriminate the Different</a></li>
+      <li><a href="#tabs-2">Professional Documents</a></li>
+      <li><a href="#tabs-3">Recap</a></li>
     </ul>
     <div class="accordion">
     <div id="tabs-1">
-      <h2>Generalization Questions</h2>
-      <p class="question">What is the difference between an architect and engineer?</p>
-      <p class="answer">The architect and engineer work together to build a structure but they fulfil different functions. An architect plans how the space will look and feel for the intended purpose, while an engineer provides plans to ensure structural safety and integrity of the building function is established. Engineering has different branches such as civil engineering, structural engineering, MEP engineering and so on.</p>
-      <p class="question">What is the difference between architecture and interior design?</p>
-      <p class="answer">Architecture involves the planning or designing of a structure. This means deciding the look and feel of the building and creating a vision for how it will come to life. Interior design involves bringing the space together once the structure is complete. This can include furniture selection and placement, wall colors, accessories and much more to enhance the interiors for aesthetic value.</p>
-      <p class="question">What is the difference between an architect and a civil engineer?</p>
-      <p class="answer">An architect’s work focuses on the design of the space and planning the aesthetics of the building. A civil engineer often gets involved in the first and vital part of projects and is responsible for site preparation activities like sewage plan, grading &amp; drainage plans, water systems, erosion control plans, utility plans and more.</p>
+      <h2>Discriminate the Different</h2>
+      <p class="question">WHAT IS THE DIFFERENCE BETWEEN CONCEPT DESIGN AND SCHEMATIC DESIGN?</p>
+      <p class="answer">The difference between concept design and schematic design lies in the level of resolution. Concept design can be abstract, while schematic design begins to articulate spatial and architectural elements in a way that isn’t necessary for concept design.<br>
+        Your goal in schematic design should be to settle on an overall concept for the project and produce a framework through which to move forward into design development, and eventually construction. <br>
+        Concept design can be loose and diagrammatic. There is no need to address issues of scale or constructability during this process. But standard conventions of architectural drawing (plan, section, elevation) should be used in the schematic design phase to articulate space and scale.</p>
     </div>
     <div id="tabs-2">
-      <h2>Academic Questions</h2>
-      <p class="question">What is the best architecture school?</p>
-      <p class="answer">This is a common and understandable question. The answer is more about how you see yourself than it is about having a list of schools ranked by quality. As one of our recent blog posts explains, there is no objective way to say which are the best schools. The more you understand what you want out of an architecture degree, the easier it will be to select a school. </p>
-      <p class="question">What is the difference between a B.Arch and an M.Arch?</p>
-      <p class="answer">The professional degrees accredited by NAAB or CACB have essentially the same professional content requirements for a B.Arch, M.Arch, or a D.Arch. General education courses are expected in all three degree types. The definition of “graduate level” study is made by the institution.</p>
-      <p class="question">Can I expect a higher salary with an M.Arch.?</p>
-      <p class="answer">In general, salaries in architecture firms are not calibrated by degree types, but by level of experience, personal skill-sets, and quality of work demonstrated by a review of the portfolio. Grade transcripts are rarely requested. Success in practice is a combination of many factors, and the professional degree type alone does not affect salary levels, like it might in other fields. However, lack of a professional degree can negatively impact long-term success in licensure issues.</p>
-      <p class="question">Can I get a job with a pre-professional architecture degree (in a 4+2 type of program)?</p>
-      <p class="answer">Yes, but you likely will not be able to get a license to practice independently. Having completed the first part of a 4+2 program is often reasonable preparation for an entry-level job in a firm. However, long-term success in architectural practice may be limited by not having a professional degree (NAAB or CACB), which is required by most states for a license. Furthermore, NCARB standards for reciprocity across state borders require a NAAB degree.  </p>
-      <p class="question">Would it be a good idea to attend a community college for two years and finish up at an NAAB program?</p>
-      <p class="answer">Some community colleges have a formal “articulation agreement” with a specific NAAB program that provides a cost-effective path to a professional degree. However, you should not assume that community college courses will meet professional course requirements and give you advance standing in any NAAB program. While many professional programs may accept individual technical courses from a community college, it is quite common to place the transfer student in the first year of a 4- or 5-year design sequence. If you do attend community college, maintain good records including all course materials and your assignments. </p>
-      <p class="question">What is a “professional degree” in architecture? How do I know if a program is professionally accredited?</p>
-      <p class="answer">A “professional degree” in architecture refers to those degrees that satisfy North American educational requirements for becoming a licensed architect. Most state and provincial registration boards require an applicant for licensure to have graduated from a program accredited by the National Architectural Accrediting Board (NAAB), in the United States, or by the Canadian Architectural Certification Board (CACB), in Canada. The accrediting process is intended to verify that each accredited program substantially meets those standards that, as a whole, comprise an appropriate education for an architect. </p>
+      <h2>Inside a Document</h2>
+      <p class="question">WHAT IS INCLUDED IN SCHEMATIC DESIGN DOCUMENTS?</p>
+      <p class="answer">Schematic design documents include:<br>
+        - Project summary and narrative<br>
+        - Site and code analysis<br>
+        - Existing and proposed site plans<br>
+        - Floor plans for every level<br>
+        - Multiple building sections<br>
+        - Building elevations<br>
+        - Structural schematic drawings or narrative<br>
+        - Mechanical schematic drawings or narrative<br>
+        - Plumbing schematic drawings or narrative<br>
+        - Electrical schematic drawings or narrative</p>
     </div>
     <div id="tabs-3">
-      <h2>Generalization Questions</h2>
-      <p class="question">What is 3D architectural rendering?</p>
-      <p class="answer">Architectural rendering involves creating three dimensional images to visualize the architectural design. It illustrates what the space will look like once it’s built. A 3D rendering helps develop and display designs more accurately. It presents a very life-like representation of the design which makes it easier for investors and developers to market and sell or lease their property.</p>
-      <p class="question">What is an architectural floor plan?</p>
-      <p class="answer">An architectural plan shows a floor space from above. It includes the dimensions, physical elements, and relationships between rooms, spaces and other features. It is one of the main elements of an architectural design.</p>
-      <p class="question">Should I hire an architect for my building project?</p>
-      <p class="answer">Although it is generally recommended to hire an architect, it is not a requirement for every project. Some structures can be designed without hiring an architect (such as certain single family homes upto 2 storeys). But before you decide not to hire an architect, you should check with the building department to confirm the requirements of your project. The building department will consider all factors and let you know if it is required of you to hire a licensed architect.</p>
-      <p class="question">How should I select an architect for my project?</p>
-      <p class="answer">There is no doubt that selecting the right architect is important for a successful project. You can ask for recommendations from friends or family or look up architects online but you should consider several major factors to make a decision, such as: area of experience and expertise, availability, number of completed projects, services offered, and cost. You can also look at their previous projects to see their work and ask for references to get an opinion.</p>
-      <p class="question">What services can an architect provide? </p>
-      <p class="answer">An architect can provide numerous services based on your project requirements. This includes feasibility studies to determine what can be built, developing the design/architectural plans, working with the engineer and contractor to bring your project to life, providing permit documents and much more. It is important to check that the architect you want to hire can provide all the services needed for your project.</p>
+      <h2>Recap</h2>
+      <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
+      <p class="answer">The 5 phases of an architectural design project are:<br>
+        - Schematic Design Phase<br>
+        - Design Development Phase<br>
+        - Construction Document Phase<br>
+        - Bidding Phase<br>
+        - Construction Administration Phase</p>
     </div>
   </div>
   </div>
