--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -11,10 +11,6 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/additional-methods.min.js"></script> 
@@ -113,23 +109,12 @@
   </div>
 
 <div class="faq w3-row-padding w3-padding-64">
-  <h2 class="w3-center">FAQ</h2>
-  <div id="tabs" class="service-tabs">
-    <ul>
-      <li><a href="#tabs-1">Discriminate the Different</a></li>
-      <li><a href="#tabs-2">Professional Documents</a></li>
-      <li><a href="#tabs-3">Recap</a></li>
-    </ul>
-    <div class="accordion">
-    <div id="tabs-1">
-      <h2>Discriminate the Different</h2>
+  <h2 class="w3-center">RECAP</h2>
+  <div class="accordion service-tabs">
       <p class="question">WHAT IS THE DIFFERENCE BETWEEN CONCEPT DESIGN AND SCHEMATIC DESIGN?</p>
       <p class="answer">The difference between concept design and schematic design lies in the level of resolution. Concept design can be abstract, while schematic design begins to articulate spatial and architectural elements in a way that isn’t necessary for concept design.<br>
         Your goal in schematic design should be to settle on an overall concept for the project and produce a framework through which to move forward into design development, and eventually construction. <br>
         Concept design can be loose and diagrammatic. There is no need to address issues of scale or constructability during this process. But standard conventions of architectural drawing (plan, section, elevation) should be used in the schematic design phase to articulate space and scale.</p>
-    </div>
-    <div id="tabs-2">
-      <h2>Inside a Document</h2>
       <p class="question">WHAT IS INCLUDED IN SCHEMATIC DESIGN DOCUMENTS?</p>
       <p class="answer">Schematic design documents include:<br>
         - Project summary and narrative<br>
@@ -142,9 +127,6 @@
         - Mechanical schematic drawings or narrative<br>
         - Plumbing schematic drawings or narrative<br>
         - Electrical schematic drawings or narrative</p>
-    </div>
-    <div id="tabs-3">
-      <h2>Recap</h2>
       <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
       <p class="answer">The 5 phases of an architectural design project are:<br>
         - Schematic Design Phase<br>
@@ -152,9 +134,22 @@
         - Construction Document Phase<br>
         - Bidding Phase<br>
         - Construction Administration Phase</p>
+  </div>
+  </div>
+
+  <div class="w3-center">
+    <!-- Pagination -->
+    <div class="w3-center w3-padding-32 w3-theme-l5">
+      <div class="w3-bar">
+        <a href="#" class="w3-bar-item w3-button w3-hover-theme">«</a>
+        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">1</a>
+        <a href="service2.html" class="w3-bar-item w3-button w3-hover-theme">2</a>
+        <a href="service3.html" class="w3-bar-item w3-button w3-hover-theme">3</a>
+        <a href="service4.html" class="w3-bar-item w3-button w3-hover-theme">4</a>
+        <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">5</a>
+        <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">»</a>
+      </div>
     </div>
-  </div>
-  </div>
   </div>
 
 <!-- Footer -->
