--- a/yourSite/service2.html
+++ b/yourSite/service2.html
@@ -28,8 +28,8 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button dropdown-button current-page" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="service1.html" class="w3-bar-item w3-button current-page">Schematic Design</a>
-      <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
+      <a href="service1.html" class="w3-bar-item w3-button">Schematic Design</a>
+      <a href="service2.html" class="w3-bar-item w3-button current-page">Design Development</a>
       <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
       <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
       <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
@@ -65,8 +65,8 @@
 <!-- Image Header -->
 <div class="hero-service w3-display-container">
   <div class="hero-content w3-display-bottomleft">  
-    <h1>WHAT IS SCHEMATIC DESIGN PHASE?</h1>
-    <h2>This is a comprehensive guide on the schematic design phase - the first phase of an architectural project. We’ll explore what it is, who’s involved, what’s included and examples of schematic design drawings.</h1>
+    <h1>WHAT IS DESIGN DEVELOPMENT PHASE?</h1>
+    <h2>Design Development is a crucial part of the early design process in architecture. In this guide, you’ll learn what it is, and why it’s so important for architectural firms.</h1>
   </div>
 </div>
 
