--- a/yourSite/service2.html
+++ b/yourSite/service2.html
@@ -72,43 +72,53 @@
 
   <!-- Content Section -->
   <div class="w3-container w3-padding-32 about-special">
-    <p>As architects, we rely on multiple design phases in our projects to ensure a smooth schedule and workflow for everyone on the project team. The Schematic Design phase is the first phase of the architectural design project schedule. Good programming and planning lay the groundwork for a successful design process, and ultimately a successful construction project.</p>
-    <p>Schematic design is one of our favorite phases because it could be a lot of fun, especially if your design team practices good planning and project management moving forward. While the end goal of the architectural design process is a built and occupied structure, these first efforts during the schematic design phase are imperative for success and efficiency in the rest of the project scope.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS SCHEMATIC DESIGN?</h3>
-    <p>Schematic Design is the first phase of the architectural design process. At this stage, your design team begins to describe the architectural and tectonic elements of the project design.</p>
-    <p>The team takes the programming and concept design, and translates it  into architectural and spatial designs. Most of us explore many ideas in this phase in order to achieve the best possible design solutions.<p>
-    <p>Two important components for a successful schematic design phase are site analysis and programming. Both the building program and location have significant implications in the design process, so it’s important to have a solid understanding of these foundational components at this stage.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHO'S INVOLVED IN SCHEMATIC DESIGN?</h3>
-    <p>This phase begins shortly after the project is started. While all team members and stakeholders can be involved in the schematic design process, it is more likely that the project Owner and Architect will be the most involved in this phase.</p>
-    <p>During this phase, you and the client work closely, to make sure all the necessary building program needs are covered in the project design. In fact, your client may be more involved in the day-to-day workings of the Schematic Design stage than any other design stage hereafter.<p>   
-    <p>Your architecture team will use tools like schematic diagrams and sketching to quickly convey spatial ideas to the client. These tools allow iterations and prevent any team member from settling on an idea prematurely.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT COMES AFTER SCHEMATIC DESIGN?</h3>
-    <p>By the end of schematic design, your architecture team should have a fundamental understanding of the scale and the systems of the project. There should be clarity about the various consultants and engineers that will be needed in order to proceed to the design development phase.</p>
-    <p>After the SD phase, the project will move into design development, and then into the construction document phase. The schedule and the budget of a project will determine the scope of each phase of the design.</p>
-    <p>During the next design phase, you and your team will flesh out the schematic design ideas even more, in order to more fully understand how the various systems and elements of the building design are integrated into the ultimate construction project. </p>
-    <p>As architects, it is common for multiple ideas and design concepts to be explored and developed during the schematic design phase. Ultimately, only one is chosen, but it’s important not to settle on any particular option too quickly in this stage, in order to make room for creative solutions and approaches. </p>
-    <p>But, if you do decide to explore multiple design options in schematic design, it’s necessary to choose one before moving forward into the design development phase. So everyone is on the same page when your team develops the design further.</p>
+    <p>Design Development is a crucial part of the early design process in architecture. In this guide, you’ll learn what it is, and why it’s so important for architectural firms.</p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS DESIGN DEVELOPMENT?</h3>
+    <p>The design development phase is an interim check between the schematic design and construction documentation phases. The name appropriately describes this stage of design: it develops – from the schematic concept into a more refined and articulated architectural idea.</p>
+    <p>This is where we develop the design in detail by diving deep into finishes and materiality and system integration.<p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHY IS THE DESIGN DEVELOPMENT PHASE SO IMPORTANT?</h3>
+    <p>The design development phase is a critical part of the architectural design process - it saves time and money in the later phases of design and construction.</p>
+    <p>Design Development can serve as a basis for cost prediction in bidding, essentially providing the basis for an estimate for construction. These documents may also be used as part of the approvals process for early building permits. <p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">6 ELEMENTS OF DESIGN DEVELOPMENT:</h3>
+    <p>During design development, we will use all 6 of these elements not only as deliverables but as tools to explore our building design. Usually, clients will also use these deliverables to get preliminary pricing on the project.</p>
+    <ol>
+      <li>PLANS</li>
+      <p>Floor plans and reflected ceiling plans of all levels should be more or less complete for this deliverable. The plans should be graphically complete except for minor coordination: rooms should be labeled and numbered, doors should be tagged, and detailing initiated.</p>
+      <p>Enlarged plans should be provided for unique programmatic areas in the project such as lobbies, restrooms, auditoriums, typical residential units, classrooms etc.</p>
+      <li>SECTIONS</li>
+      <p>The design development set should contain a series of section drawings, including building sections, wall sections, and detail sections. These should be drawn and detailed appropriate to scale.</p>
+      <p>The sections and section details should depict clearances, infrastructure, adjacent context, and other references that are helpful to understand the design and programmatic intent.</p>
+      <li>ELEVATIONS</li>
+      <p>All building elevations should be included in the design development set. Enlarged building elevations for unique façade conditions should be included with dimensions and material designations at typical conditions. The elevations should include the location of all openings including doors and windows, both fixed and operable.</p>
+      <li>MATERIALS</li>
+      <p>While the finish schedule does not need to be complete, there should be an understanding of the basic materials for all elements of the architecture, including structure, envelope, and interior. Materials should be annotated in the drawings, and coordinated graphically among drawings. The draft finish schedule should be included, indicating the floor, wall, and ceiling finishes.</p>
+      <li>COORDINATION</li>
+      <p>Coordination between disciplines should be well underway during design development. There will need to be a great deal of coordination between structure, landscape, MEP, and architect in order to deliver a full design development drawing set. Each discipline will need to provide a drawing set to the architect including plans, sections, diagrams, details, and reference sheets.</p>
+      <li>SPECIFICATIONS</li>
+      <p>While a complete project manual of full specification sections isn’t necessary for this phase of the design process, there should at minimum be an outline specification document. Even better, a more developed draft of full-length sections for structure and envelope (Divisions 3 through 8). Developed specifications at this phase of the design process help ensure the success of construction documents, bidding, and construction administration in the future.</p>
+    </ol>
   </div>
 
 <div class="faq w3-row-padding w3-padding-64">
   <h2 class="w3-center">RECAP</h2>
   <div class="accordion service-tabs">
-      <p class="question">WHAT IS THE DIFFERENCE BETWEEN CONCEPT DESIGN AND SCHEMATIC DESIGN?</p>
-      <p class="answer">The difference between concept design and schematic design lies in the level of resolution. Concept design can be abstract, while schematic design begins to articulate spatial and architectural elements in a way that isn’t necessary for concept design.<br>
-        Your goal in schematic design should be to settle on an overall concept for the project and produce a framework through which to move forward into design development, and eventually construction. <br>
-        Concept design can be loose and diagrammatic. There is no need to address issues of scale or constructability during this process. But standard conventions of architectural drawing (plan, section, elevation) should be used in the schematic design phase to articulate space and scale.</p>
-      <p class="question">WHAT IS INCLUDED IN SCHEMATIC DESIGN DOCUMENTS?</p>
-      <p class="answer">Schematic design documents include:<br>
-        - Project summary and narrative<br>
-        - Site and code analysis<br>
-        - Existing and proposed site plans<br>
-        - Floor plans for every level<br>
-        - Multiple building sections<br>
-        - Building elevations<br>
-        - Structural schematic drawings or narrative<br>
-        - Mechanical schematic drawings or narrative<br>
-        - Plumbing schematic drawings or narrative<br>
-        - Electrical schematic drawings or narrative</p>
+      <p class="question">5 IMPORTANT THINGS TO KEEP IN MIND IN THE DD PHASE:</p>
+      <p class="answer">In every phase of the project, there are specific things that we need to keep in mind. The design development phase focuses heavily on the coordination and developing details and materiality for the project.<br>
+        - COORDINATE WITH YOUR CLIENT AND FIRM<br>
+        Coordinating within your design firm and with your consultants will ensure a smooth design development process. Coordinate early and often! Develop a system both internally and externally for efficient and effective coordination among architects and other disciplines.<br>
+        - PROPERLY DELEGATE TO YOUR TEAM<br>
+        Don’t try to solve every problem and complete every drawing yourself. Delegate designs and work within your firm and to your consultants. Appropriately delegating the many actions necessary during design development will make the process more efficient and more manageable for the entire team.<br>
+        - FOCUS ON THE DETAILS<br>
+        Make sure to detail your design ideas through drawing and specifications. This is your first opportunity to convey to the owner and/ or stakeholders a cohesive, developed design idea. Detail your idea in plan and section, at many scales.<br>
+        - EMBRACE REVISIONS<br>
+        Continue to coordinate both internally with your team and externally with your consultants and owners/ stakeholders throughout the design services. As you progress, changes are bound to happen. Don’t resist change – embrace it. But make sure to coordinate these changes with the entire design team so that all of the drawings and documents communicate the same intent.<br>
+        - DOUBLE AND TRIPLE CHECK<br>
+        Before delivering the final design development documents, double and triple-check. Check for consistency in dimensioning, annotations, tags, callouts, acronyms, and symbols. Develop a system of checks and balances, and share this system with consultants to ensure effective checking across the disciplines. Practicing this early and consistently will make the rest of the project design and construction process easier for you and your team.</p>
+      <p class="question">WHAT IS INCLUDED IN DESIGN DEVELOPMENT DOCUMENTS?</p>
+      <p class="answer">Design development documents include:<br>
+        Design Development documents typically includes a standard architectural drawing set: site plan, floor plans, sections, elevations, and details.<br>
+        This drawing set also includes structural drawings, MEP (mechanical, electrical, and plumbing) drawings, civil engineering drawings, and landscape architecture drawings. Other consultants such as acoustics, fire protection, and envelope may provide drawings and documents as well.<br>
+        A draft project manual should accompany the design development drawing set. This project manual should include at minimum the outline specifications for the project. An expanded outline, or full draft of the full specifications set is even better. The more developed documentation provided at this phase of design, the more successful later phases tend to be.</p>
       <p class="question">ALL THE DESIGN PHASES YOU SHOULD KNOW.</p>
       <p class="answer">The 5 phases of an architectural design project are:<br>
         - Schematic Design Phase<br>
@@ -124,8 +134,8 @@
     <div class="w3-center w3-padding-32 w3-theme-l5">
       <div class="w3-bar">
         <a href="#" class="w3-bar-item w3-button w3-hover-theme">«</a>
-        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">1</a>
-        <a href="service2.html" class="w3-bar-item w3-button w3-hover-theme">2</a>
+        <a href="service1.html#" class="w3-bar-item w3-button w3-hover-theme">1</a>
+        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">2</a>
         <a href="service3.html" class="w3-bar-item w3-button w3-hover-theme">3</a>
         <a href="service4.html" class="w3-bar-item w3-button w3-hover-theme">4</a>
         <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">5</a>
