--- a/yourSite/service3.html
+++ b/yourSite/service3.html
@@ -29,8 +29,8 @@
     <button class="w3-button dropdown-button current-page" title="Notifications"><a href="#service" class="drop-down">Service</a><i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="service1.html" class="w3-bar-item w3-button">Schematic Design</a>
-      <a href="service2.html" class="w3-bar-item w3-button current-page">Design Development</a>
-      <a href="service3.html" class="w3-bar-item w3-button">Construction Documents</a>
+      <a href="service2.html" class="w3-bar-item w3-button">Design Development</a>
+      <a href="service3.html" class="w3-bar-item w3-button current-page">Construction Documents</a>
       <a href="service4.html" class="w3-bar-item w3-button">Bidding/negotiating</a>
       <a href="service5.html" class="w3-bar-item w3-button">Contract Administration</a>
     </div>
@@ -135,8 +135,8 @@
       <div class="w3-bar">
         <a href="#" class="w3-bar-item w3-button w3-hover-theme">«</a>
         <a href="service1.html" class="w3-bar-item w3-button w3-hover-theme">1</a>
-        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">2</a>
-        <a href="service3.html" class="w3-bar-item w3-button w3-hover-theme">3</a>
+        <a href="service2.html" class="w3-bar-item w3-button w3-hover-theme">2</a>
+        <a href="#" class="w3-bar-item w3-button w3-theme w3-hover-theme">3</a>
         <a href="service4.html" class="w3-bar-item w3-button w3-hover-theme">4</a>
         <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">5</a>
         <a href="service5.html" class="w3-bar-item w3-button w3-hover-theme">»</a>
