--- a/yourSite/service1.html
+++ b/yourSite/service1.html
@@ -90,6 +90,58 @@
     <p>But, if you do decide to explore multiple design options in schematic design, it’s necessary to choose one before moving forward into the design development phase. So everyone is on the same page when your team develops the design further.</p>
   </div>
 
+  <!-- Pricing Row -->
+<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
+  <h2>PRICING</h2>
+  <p>CCarefully look at the pricing plan before starting an architecture phase.</p><br>
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme-l2">
+        <p class="w3-large">Schematic<br> Design</p>
+      </li>
+      <li class="w3-padding-16"><b>15%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>10% – 25%</b></li>
+    </ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Design<br> Development</p>
+      </li>
+      <li class="w3-padding-16"><b>20%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>10% – 25%</b></li>
+    </ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Construction<br> Documents</p>
+      </li>
+      <li class="w3-padding-16"><b>40%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>35% – 50%</b></li></ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Bidding <br> Negotiating</p>
+      </li>
+      <li class="w3-padding-16"><b>5%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range slightly off from <b>5%</b></li></ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Construction<br> Administration</p>
+      </li>
+      <li class="w3-padding-16"><b>20%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>20% – 30%</b></li></ul>
+  </div>
+</div>
+
 <div class="faq w3-row-padding w3-padding-64">
   <h2 class="w3-center">RECAP</h2>
   <div class="accordion service-tabs">
