--- a/yourSite/service3.html
+++ b/yourSite/service3.html
@@ -65,17 +65,18 @@
 <!-- Image Header -->
 <div class="hero-service w3-display-container">
   <div class="hero-content w3-display-bottomleft">  
-    <h1>WHAT IS DESIGN DEVELOPMENT PHASE?</h1>
-    <h2>Design Development is a crucial part of the early design process in architecture. In this guide, you’ll learn what it is, and why it’s so important for architectural firms.</h1>
+    <h1>WHAT IS CONSTRUCTION DOCUMENTS PHASE?</h1>
+    <h2>Construction documents serve as a contract between the Architect, the Contractor, and the Owner. In construction documents, all the building practices coordinate to turn the big design ideas presented to the Owner into something buildable and safe to inhabit.</h1>
   </div>
 </div>
 
   <!-- Content Section -->
   <div class="w3-container w3-padding-32 about-special">
-    <p>Design Development is a crucial part of the early design process in architecture. In this guide, you’ll learn what it is, and why it’s so important for architectural firms.</p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS DESIGN DEVELOPMENT?</h3>
-    <p>The design development phase is an interim check between the schematic design and construction documentation phases. The name appropriately describes this stage of design: it develops – from the schematic concept into a more refined and articulated architectural idea.</p>
-    <p>This is where we develop the design in detail by diving deep into finishes and materiality and system integration.<p>
+    <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
+    <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS CONSTRUCTION DOCUMENTATION?</h3>
+    <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
+    <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHY IS THE DESIGN DEVELOPMENT PHASE SO IMPORTANT?</h3>
     <p>The design development phase is a critical part of the architectural design process - it saves time and money in the later phases of design and construction.</p>
     <p>Design Development can serve as a basis for cost prediction in bidding, essentially providing the basis for an estimate for construction. These documents may also be used as part of the approvals process for early building permits. <p>
@@ -98,6 +99,58 @@
       <p>While a complete project manual of full specification sections isn’t necessary for this phase of the design process, there should at minimum be an outline specification document. Even better, a more developed draft of full-length sections for structure and envelope (Divisions 3 through 8). Developed specifications at this phase of the design process help ensure the success of construction documents, bidding, and construction administration in the future.</p>
     </ol>
   </div>
+
+<!-- Pricing Row -->
+<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
+  <h2>PRICING</h2>
+  <p>CCarefully look at the pricing plan before starting an architecture phase.</p><br>
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Schematic<br> Design</p>
+      </li>
+      <li class="w3-padding-16"><b>15%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>10% – 25%</b></li>
+    </ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Design<br> Development</p>
+      </li>
+      <li class="w3-padding-16"><b>20%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>10% – 25%</b></li>
+    </ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme-l2">
+        <p class="w3-large">Construction<br> Documents</p>
+      </li>
+      <li class="w3-padding-16"><b>40%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>35% – 50%</b></li></ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Bidding <br> Negotiating</p>
+      </li>
+      <li class="w3-padding-16"><b>5%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range slightly off from <b>5%</b></li></ul>
+  </div>
+
+  <div class="w3-third w3-margin-bottom">
+    <ul class="w3-ul w3-border w3-hover-shadow">
+      <li class="w3-theme">
+        <p class="w3-large">Construction<br> Administration</p>
+      </li>
+      <li class="w3-padding-16"><b>20%</b> of Architectural Fees</li>
+      <li class="w3-padding-16">Can Range <b>20% – 30%</b></li></ul>
+  </div>
+</div>
 
 <div class="faq w3-row-padding w3-padding-64">
   <h2 class="w3-center">RECAP</h2>
