--- a/yourSite/service3.html
+++ b/yourSite/service3.html
@@ -75,11 +75,10 @@
     <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
     <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS CONSTRUCTION DOCUMENTATION?</h3>
-    <p>Construction documents may not seem like the most glamorous part of architectural design. All the ‘fun’ stuff - the model making, sketching, conceptual conversations and wild iterations - happens earlier in schematic design. Even the term ‘construction documents’ sounds boring.</p>
-    <p>But, construction documents (CDs) are an important part of the architectural process, and provide their own unique opportunities for the designer. Construction documents are directions from the Architect to the Contractor. These documents describe precisely how the Contractor will make the Architect’s design become a built object - through drawings and specifications. <p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHY IS THE DESIGN DEVELOPMENT PHASE SO IMPORTANT?</h3>
-    <p>The design development phase is a critical part of the architectural design process - it saves time and money in the later phases of design and construction.</p>
-    <p>Design Development can serve as a basis for cost prediction in bidding, essentially providing the basis for an estimate for construction. These documents may also be used as part of the approvals process for early building permits. <p>
+    <p>Here, all the details come together, and construction documents serve two basic purposes: to obtain a building permit, and to get the design built. These may be delivered in two types of construction documents - a permit set and a construction set. </p>
+    <p>While both construction document sets need to be very detailed, it is common practice for the permit set to be delivered prior to the construction set. In so doing, any issues that arise during permitting can be addressed and corrected in the construction set. In order for a completed building to receive its final certificate of occupancy from the local authority having jurisdiction, the building must closely match the construction documents submitted in the permit set. <p>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">WHAT IS THE PURPOSE OF CONSTRUCTION DOCUMENTS?</h3>
+    <p>The purpose of construction documents is to get the design built. These are contract binding documents which describe precisely how the design shall be built: methods, materials, building systems, components. The construction documents describe precisely, in both large and small scales, every facet of the building design. Good construction documents provide the Contractor the most comprehensive understanding of the Architect’s intent.</p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">6 ELEMENTS OF DESIGN DEVELOPMENT:</h3>
     <p>During design development, we will use all 6 of these elements not only as deliverables but as tools to explore our building design. Usually, clients will also use these deliverables to get preliminary pricing on the project.</p>
     <ol>
@@ -103,7 +102,7 @@
 <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
   <h2>PRICING</h2>
-  <p>CCarefully look at the pricing plan before starting an architecture phase.</p><br>
+  <p>Carefully look at the pricing plan before starting an architecture phase.</p><br>
   <div class="w3-third w3-margin-bottom">
     <ul class="w3-ul w3-border w3-hover-shadow">
       <li class="w3-theme">
