--- a/yourSite/service2.html
+++ b/yourSite/service2.html
@@ -102,7 +102,7 @@
     <!-- Pricing Row -->
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
   <h2>PRICING</h2>
-  <p>CCarefully look at the pricing plan before starting an architecture phase.</p><br>
+  <p>Carefully look at the pricing plan before starting an architecture phase.</p><br>
   <div class="w3-third w3-margin-bottom">
     <ul class="w3-ul w3-border w3-hover-shadow">
       <li class="w3-theme">
